# NotifyMe

./: .env.example  .gitignore  README.md  pyproject.toml
launchd/: com.notifyme.checker.plist
notifyme/: __init__.py  cli.py  database.py  fetcher.py  models.py  notifier.py  scheduler.py
notifyme/checkers/: __init__.py  agentic.py  base.py  credits.py  news.py  price.py  webpage.py
scripts/: anthropic_credits_standalone.py  setup.sh  sync-to-mini.sh
tests/: __init__.py  test_checkers.py  test_cli.py  test_database.py
